--- a/index.html
+++ b/index.html
@@ -13,50 +13,45 @@
 
 <body>
 
-  <div class="main-container">
+  <img src="./assets/desktop/logo.svg" class="podcast-logo" alt="Podcast Logo">
 
-    <div class="pod-logo">
-      <img src="./assets/desktop/logo.svg" alt="Podcast logo">
-    </div>
+  <main>
+    <div class="wrapper">
 
-    <div class="podcast-host">
-      <img src="./assets/desktop/image-host.jpg" alt="Podcast Host">
-    </div>
+      <div class="main-content">
+        <div class="inner-container">
 
-    <div class="text-container">
+          <div class="title-section">
+            <h1>Publish your podcasts <span>everywhere.</span></h1>
 
-      <div class="hero-title">
-        <h2>Publish your podcasts <span>everywhere.</span></h2>
+            <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify,
+              Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+          </div>
 
-        <p> Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify,
-          Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
-      </div>
+          <form id="form" autocomplete="off">
+            <div class="input-group">
+              <input type="text" id="txtEmail" class="txtEmail" placeholder="Email Address">
+              <input type="submit" id="btnSubmit" class="btnSubmit" value="Request Access">
+            </div>
+            <div id="errorMessage" class="errorMessage"></div>
+          </form>
 
-      <form id="form" autocomplete="off">
-        <div class="btn-group">
-          <input type="text" class="txt-Email" id="txtEmail" placeholder="Email Address">
-          <input type="submit" class="btn-Request" value="Request Access">
+          <div class="social">
+            <img src="./assets/desktop/spotify.svg" alt="Spotify Logo">
+            <img src="./assets/desktop/apple-podcast.svg" alt="Apple Podcast Logo">
+            <img src="./assets/desktop/google-podcasts.svg" alt="Google Podcast Logo">
+            <img src="./assets/desktop/pocket-casts.svg" alt="Pocket Casts Logo">
+          </div>
         </div>
-        <div id="error" class="errorMessage"></div>
-      </form>
-
-      <div class="icon-group">
-        <div><img src="./assets/desktop/spotify.svg" alt="Spotify Logo"></div>
-        <div><img src="./assets/desktop/apple-podcast.svg" alt="Apple Podcast Logo"></div>
-        <div><img src="./assets/desktop/google-podcasts.svg" alt="Google Podcast Logo"></div>
-        <div><img src="./assets/desktop/pocket-casts.svg" alt="Pocket Cast Logo "></div>
       </div>
 
+      <div class="host-image"></div>
     </div>
-  </div>
 
-  <div class="dot-pattern">
-    <div><img src="./assets/desktop/bg-pattern-dots.svg" alt="Dot Pattern"></div>
-  </div>
+    <img src="./assets/desktop/bg-pattern-dots.svg" class="dot-pattern" alt="Pattern dots">
+  </main>
 
-
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
-
-<script type="text/javascript" src="main.js"></script>
